--- a/notebooks/EDA+FE+ML.ipynb
+++ b/notebooks/EDA+FE+ML.ipynb
@@ -2,6 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 114,
+   "id": "add615d3-2e53-46e9-98a5-3a5d15996cec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.5.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sklearn\n",
+    "print(sklearn.__version__)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "913db48a-48fa-4498-a718-c0c89f6517da",
    "metadata": {},
